[project]
name = "meshtool"
version = "0.1.0"
authors = [
  { name="Danielle McGuire", email="dcm678@gmail.com" },
]
description = "Meshtastic management utility"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pytap2",
    "pytest",
    "meshtastic"
]

[project.urls]
Homepage = "https://github.com/witchofthewires/meshtool.git"
Issues = "https://github.com/witchofthewires/meshtool.git/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meshtool"]
